# docs/swagger.json
@@ -9,70 +9,20 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/todos": {
+        "/api/todo-list/tasks": {
             "post": {
-                "description": "Create a new todo item",
+                "description": "Create a new todo item with the provided details",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create a new todo",
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Create a new todo item",
                 "parameters": [
-                    {
-                        "description": "Todo object",
-                        "name": "todo",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.Todo"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/todos/{id}": {
-            "put": {
-                "description": "Update an existing todo item",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Update a todo",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Todo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Todo object",
                         "name": "todo",
@@ -85,27 +35,78 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content"
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/model.SuccessResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/todo-list/tasks/{id}": {
+            "put": {
+                "description": "Update a todo item with the provided ID and details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Update a todo item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Todo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated todo object",
+                        "name": "todo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.Todo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/model.SuccessResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Delete an existing todo item by ID",
-                "summary": "Delete a todo by ID",
+                "description": "Delete a todo item with the provided ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Delete a todo item by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -117,22 +118,33 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content"
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/model.SuccessResponse"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/todos/{id}/done/{done}": {
+        "/api/todo-list/tasks/{id}/status/{done}": {
             "put": {
-                "description": "Mark a todo as done or undone",
-                "summary": "Mark a todo as done",
+                "description": "Mark a todo item with the provided ID as done or not done",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Mark a todo item as done",
                 "parameters": [
                     {
                         "type": "string",
@@ -143,7 +155,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Done status (true/false)",
+                        "description": "Todo status (done or not done)",
                         "name": "done",
                         "in": "path",
                         "required": true
@@ -151,31 +163,40 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content"
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/model.SuccessResponse"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/todos/{status}": {
+        "/api/todo-list/tasks/{status}": {
             "get": {
-                "description": "Find all todos based on status",
+                "description": "Get a list of all todo items based on the provided status",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Find all todos",
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Get all todo items by status",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Todo status (active/done)",
+                        "description": "Todo status (active, done, or other)",
                         "name": "status",
-                        "in": "path"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -191,8 +212,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -213,6 +233,25 @@
                 "title": {
                     "type": "string",
                     "maxLength": 200
+                }
+            }
+        },
+        "model.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "details": {
+                    "type": "string"
+                },
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
