# model/model.go
@@ -13,3 +13,10 @@ type Todo struct {
 	CreatedAt time.Time          `json:"createdAt" bson:"createdAt"`
 	Status    string             `json:"status" bson:"status"`
 }
+type ErrorResponse struct {
+	Error   string `json:"error"`
+	Details string `json:"details"`
+}
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
